<resources>
    <string name="app_name">Notes</string>
    <string name="delete">Delete</string>
    <string name="note_title_here">Note title here</string>
    <string name="start_editing">Add your note here</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="add_note">Add note</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="date">Date</string>
</resources>