<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddNote">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                app:tint="@color/white"
                android:padding="4dp"
                android:src="@drawable/arrow"
                android:contentDescription="@string/back" />

            <ImageView
                android:id="@+id/check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="@color/white"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="12dp"
                android:padding="4dp"
                android:src="@drawable/check"
                android:contentDescription="@string/done" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/titleEdittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/note_title_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:autofillHints=""
        android:inputType="text"/>

    <EditText
        android:id="@+id/bodyEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:ems="10"
        android:lineSpacingMultiplier="1.8"
        android:hint="@string/start_editing"
        android:gravity="top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/titleEdittext"
        app:layout_constraintStart_toStartOf="@+id/titleEdittext"
        app:layout_constraintTop_toBottomOf="@+id/titleEdittext"
        android:autofillHints=""
        android:inputType="textMultiLine" />

</androidx.constraintlayout.widget.ConstraintLayout>